--- a/practices/my-app/app/globals.css
+++ b/practices/my-app/app/globals.css
@@ -31,3 +31,18 @@ body {
     text-wrap: balance;
   }
 }
+
+h1 {
+  margin-top: 0;
+  font-size: 22px;
+}
+
+h2 {
+  margin-top: 0;
+  font-size: 20px;
+}
+
+h3 {
+  margin-top: 0;
+  font-size: 18px;
+}
